per: Cấu hình lại các trường dữ liệu sẽ dùng khi tạo sản phẩm